# tcp_server

./: CMakeLists.txt  README.md  configure
.github/workflows/: codeql-analysis.yml  gitlint.yml
docs/: .buildinfo  CMakeLists.txt  changelog.html  examples.html  genindex.html  index.html  license.html  objects.inv  quickstart.html  search.html  searchindex.js  support.html  tcp_server.html
docs/.doctrees/: changelog.doctree  contributing_code.doctree  environment.pickle  examples.doctree  index.doctree  license.doctree  quickstart.doctree  support.doctree  tcp_server.doctree
docs/.doctrees/contributing/: code.doctree  index.doctree  internals.doctree
docs/_modules/: tcp_server_core.c.html
docs/_sources/: changelog.md.txt  contributing_code.md.txt  examples.md.txt  index.md.txt
docs/_sources/contributing/: internals.md.txt
docs/contributing/: code.html  index.html  internals.html
docs/source/: conf.py  index.md  index.rst
docsbuild/: genindex.html  index.html  tcp_server.html
docsbuild/.doctrees/: environment.pickle  index.doctree  quickstart.doctree  tcp_server.doctree
examples/: CMakeLists.txt
examples/client/: client.py
examples/server/: main.c
include/: tcp_server_core.h  tcp_server_library.h
libs/log/: CMakeLists.txt
libs/log/include/: log.h
libs/utils/: CMakeLists.txt
libs/utils/include/: hexdump.h  net.h
libs/utils/src/: hexdump.c  net.c
scripts/: env  run_cmake  start_tcp_server_selftest
sphinx_docs/: CMakeLists.txt
sphinx_docs/source/: conf.py  index.md  quickstart.md  support.md  tcp_server.rst
sphinx_docs/source/contributing/: code.md
src/: generic_t.h  ipc_fd.c  ipc_fd.h  tcp_private.h  tcp_server_core.c  worker_pool.c  worker_pool.h
tcp_server/: CMakeLists.txt
tcp_server/log/: CMakeLists.txt
tcp_server/log/src/: log.c
tcp_server/tcp_server/: CMakeLists.txt
tcp_server/tcp_server/include/: tcp_server.h  tcp_server_core.h
tcp_server/tcp_server/src/: generic_t.h  tcp_server_classes.h  tcp_server_core.c  tcp_server_selftest.c  worker_pool.c  worker_pool.h
tcp_server/utils/include/: net.h  utils.h
tcp_server/utils/src/: net.c
